--- a/requirements.txt
+++ b/requirements.txt
@@ -1,335 +1,5 @@
-ace_tools==0.0
-addict==2.4.0
-aiofiles==23.2.1
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiosignal==1.4.0
-alpha_vantage==3.0.0
-altair==5.5.0
-annotated-types==0.7.0
-ansi2html==1.9.2
-anyio==4.6.0
-appnope==0.1.4
-arch==7.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-arviz==0.20.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==24.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-blinker==1.8.2
-blis==0.7.11
-boto3==1.35.53
-botocore==1.35.53
-Brotli==1.1.0
-cachetools==5.5.0
-catalogue==2.0.10
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.19.0
-cloudpickle==3.0.0
-comm==0.2.2
-confection==0.1.5
-ConfigArgParse==1.7.1
-cons==0.4.6
-contourpy==1.3.0
-cssselect2==0.8.0
-curl_cffi==0.10.0
-cycler==0.12.1
-cymem==2.0.8
-Cython==3.0.12
-dash==2.18.1
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dateparser==1.2.1
-debugpy==1.8.6
-decorator==5.1.1
-defusedxml==0.7.1
-distro==1.9.0
-docutils==0.21.2
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-entrypoints==0.4
-environs==9.5.0
-etuples==0.3.9
-executing==2.1.0
-Faker==33.0.0
-fastapi==0.115.0
-fastjsonschema==2.20.0
-favicon==0.7.0
-ffmpy==0.4.0
-filelock==3.16.1
-Flask==3.0.3
-fonttools==4.57.0
-fqdn==1.5.1
-frozendict==2.4.4
-frozenlist==1.5.0
-fsspec==2024.9.0
-gitdb==4.0.11
-GitPython==3.1.43
-gradio==4.44.1
-gradio_client==1.3.0
-greenlet==3.1.1
-grpcio==1.66.2
-h11==0.14.0
-h5netcdf==1.3.0
-h5py==3.12.1
-htbuilder==0.7.0
-html5lib==1.1
-httpcore==1.0.5
-httpx==0.27.2
-huggingface-hub==0.25.1
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.27.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
-keyring==25.4.1
-kiwisolver==1.4.7
-langcodes==3.4.1
-language_data==1.2.0
-logical-unification==0.4.6
-lxml==5.3.0
-marisa-trie==1.2.0
-Markdown==3.7
-markdown-it-py==3.0.0
-markdownlit==0.0.7
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-milvus==2.3.8
-milvus-lite==2.4.10
-miniKanren==1.0.3
-mistune==3.0.2
-more-itertools==10.5.0
-mplfinance==0.12.10b0
-mpmath==1.3.0
-multidict==6.1.0
-multipledispatch==1.0.0
-multitasking==0.0.11
-murmurhash==1.0.10
-narwhals==1.14.2
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-nh3==0.2.18
-nltk==3.9.1
-notebook==7.2.2
-notebook_shim==0.2.4
-numpy==1.26.4
-open3d==0.19.0
-openai==1.50.2
-orjson==3.11.3
-outcome==1.3.0.post0
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-patsy==0.5.6
-pdf2image==1.17.0
-pdfkit==1.0.0
-peewee==3.17.6
-pexpect==4.9.0
-pillow==11.1.0
-pkginfo==1.10.0
-platformdirs==4.3.6
-playwright==1.49.1
-plotly==5.24.1
-pmdarima==2.0.4
-polygon==1.2.6
-polygon-api-client==1.14.4
-praw==7.7.1
-prawcore==2.4.0
-preshed==3.0.9
-prometheus_client==0.21.0
-prompt_toolkit==3.0.48
-propcache==0.2.0
-protobuf==5.28.2
-psutil==6.0.0
-ptyprocess==0.7.0
-PuLP==3.2.1
-pure_eval==0.2.3
-pyarrow==18.0.0
-pycairo==1.28.0
-pycparser==2.22
-pycryptodome==3.21.0
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydeck==0.9.1
-pydub==0.25.1
-pydyf==0.11.0
-pyee==12.0.0
-Pygments==2.18.0
-pykalman==0.9.7
-pymc==5.16.2
-pymdown-extensions==10.12
-pymilvus==2.4.7
-pynrose==1.0.0
-pyparsing==3.1.4
-PyPDF2==3.0.1
-pyphen==0.17.2
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.17
-PyQt5_sip==12.17.0
-pyqtgraph==0.13.7
-pyquaternion==0.9.9
-PySocks==1.7.1
-pytensor==2.25.4
-pytesseract==0.3.13
-python-binance==1.0.27
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-multipart==0.0.12
-PythonMetaTrader5==1.0.9
-pytz==2024.2
-PyWavelets==1.7.0
-PyYAML==6.0.2
-pyzmq==26.2.0
-readme_renderer==44.0
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-toolbelt==1.0.0
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986==2.0.0
-rfc3986-validator==0.1.1
-rich==13.8.1
-rpds-py==0.20.0
-ruff==0.6.8
-s3transfer==0.10.3
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
-selenium==4.25.0
-semantic-version==2.10.0
-Send2Trash==1.8.3
-sentence-transformers==3.1.1
-setuptools==75.1.0
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-st-annotated-text==4.0.1
-st-theme==1.2.3
-stack-data==0.6.3
-starlette==0.38.6
-statsmodels==0.14.3
-streamlit==1.40.1
-streamlit-camera-input-live==0.2.0
-streamlit-card==1.0.2
-streamlit-embedcode==0.1.2
-streamlit-extras==0.5.0
-streamlit-faker==0.0.3
-streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.2.4
-streamlit-toggle-switch==1.0.2
-streamlit-vertical-slider==2.5.5
-sympy==1.13.3
-ta==0.11.0
-tabulate==0.9.0
-tenacity==9.0.0
-TensorFlow1==3.2.0
-terminado==0.18.1
-thinc==8.2.5
-threadpoolctl==3.5.0
-tiktoken==0.11.0
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tokenizers==0.20.0
-toml==0.10.2
-tomlkit==0.12.0
-toolz==0.12.1
-torch==2.4.1
-tornado==6.4.1
-towhee==1.1.3
-towhee.models==1.1.3
-tqdm==4.66.5
-tradermade==1.0
-traitlets==5.14.3
-transformers==4.45.1
-trimesh==4.6.10
-trio==0.26.2
-trio-websocket==0.11.1
-twine==5.1.1
-typer==0.12.5
-types-python-dateutil==2.9.0.20240906
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.3
-ujson==5.10.0
-update-checker==0.18.0
-uri-template==1.3.0
-urllib3==2.2.3
-uvicorn==0.31.0
-validators==0.34.0
-wasabi==1.1.3
-watchdog==6.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-weasyprint==65.0
-webcolors==24.8.0
-webdriver-manager==4.0.2
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.0.4
-wheel==0.44.0
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-wsproto==1.2.0
-xarray==2024.9.0
-xarray-einstats==0.8.0
-xgboost==2.1.4
-yarl==1.18.0
-yfinance==0.2.58
-youtube-transcript-api==1.2.2
-zipp==3.20.2
-zopfli==0.2.3.post1
+streamlit
+numpy
+Pillow
+scikit-learn
+pycairo
